--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,9 @@ body {
   margin: auto;
   font-weight: 800;
 }
+.header-pages{
+  color: black;
+}
 
 .about-image {
   width: 45%;
@@ -133,6 +136,7 @@ body {
 .github-button {
   display: flex;
   justify-content: space-between;
+  color: #AFC9C1;
 }
 
 .single-card {
